--- a/vercel.json
+++ b/vercel.json
@@ -6,23 +6,19 @@
       "use": "@vercel/static"
     },
     {
-      "src": "public/**",
+      "src": "css/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "js/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "images/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
-    {
-      "src": "/css/(.*)",
-      "dest": "/public/css/$1"
-    },
-    {
-      "src": "/js/(.*)",
-      "dest": "/public/js/$1"
-    },
-    {
-      "src": "/images/(.*)",
-      "dest": "/public/images/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
