--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,11 @@
       "use": "@vercel/static"
     },
     {
-      "src": "css/*",
+      "src": "css/styles.css",
       "use": "@vercel/static"
     },
     {
-      "src": "js/*",
+      "src": "js/main.js",
       "use": "@vercel/static"
     },
     {
@@ -19,6 +19,18 @@
     }
   ],
   "routes": [
+    {
+      "src": "/css/(.*)",
+      "dest": "/css/$1"
+    },
+    {
+      "src": "/js/(.*)",
+      "dest": "/js/$1"
+    },
+    {
+      "src": "/images/(.*)",
+      "dest": "/images/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
